[tool.poetry]
name = "wallee"
version = "6.3.0"
description = "SDK that allows you to access Wallee Group AG API"
authors = ["Wallee AG"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/wallee-payment/python-sdk"
keywords=["wallee", "Payment", "Payment Integration"]
include = ["wallee/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"

urllib3 = ">=2.3, <3"
pydantic = "^2.10.4"
PyJWT = "^2.10.1"
python-dateutil = "^2.9.0.post0"
typing-extensions = "^4.12.2"

[tool.poetry.dev-dependencies]
flake8 = "^7.1.1"
mypy = "^1.14.1"
pytest = "^3.9"
tox = "^4.23.2"
types-python-dateutil = "^2.9.0.20241206"

[tool.poetry.classifiers]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale"
]

[build-system]
requires = ["setuptools >= 75.6"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[tool.mypy]
files = [
  "wallee",
  "tests"
]
# TODO: enable "strict" once all these individual checks are passing
# strict = true

warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

strict_equality = true
strict_concatenate = true

check_untyped_defs = true

disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

#disallow_untyped_calls = true
#disallow_incomplete_defs = true
#disallow_untyped_defs = true
#
#no_implicit_reexport = true
#
#warn_return_any = true
